# Master_Thesis

./: CMakeLists.txt  README.md  SIF_traj_log.txt
Data/: .gitignore  CMakeLists.txt
Data/NC_QP/: obj.csv
Data/QP/Param/: x0.csv  x_lb.csv  x_ub.csv
Data/SIF/: CMakeLists.txt  SIF_Parameters.hpp  ipopt.opt
Data/SIF/HS/: .gitignore
Data/SIF/HS/HS1.SIF/: obj.csv  x.csv  z.csv
Data/SIF/HS/HS10.SIF/: obj.csv  x.csv
Data/SIF/HS/HS11.SIF/: obj.csv  x.csv  z.csv
Data/SIF/HS/HS12.SIF/: mu.csv  obj.csv  x.csv  z.csv
Data/SIF/HS/HS13.SIF/: mu.csv  obj.csv  x.csv  z.csv
Data/SIF/HS/HS14.SIF/: lbd.csv  mu.csv  obj.csv  theta.csv  x.csv  z.csv
Data/SIF/HS/HS15.SIF/: obj.csv  x.csv  z.csv
Data/SIF/HS/HS16.SIF/: obj.csv  x.csv  z.csv
Data/SIF/HS/HS17.SIF/: obj.csv  x.csv  z.csv
Data/SIF/HS/HS18.SIF/: obj.csv  x.csv  z.csv
Data/SIF/HS/HS19.SIF/: mu.csv  obj.csv  x.csv  z.csv
Data/SIF/HS/HS2.SIF/: obj.csv  x.csv  z.csv
Data/SIF/HS/HS20.SIF/: obj.csv  x.csv  z.csv
Data/SIF/HS/HS21.SIF/: obj.csv  x.csv  z.csv
Data/SIF/HS/HS22.SIF/: obj.csv  x.csv  z.csv
Data/SIF/HS/HS23.SIF/: obj.csv  x.csv  z.csv
Data/SIF/HS/HS24.SIF/: obj.csv  x.csv  z.csv
Data/SIF/HS/HS25.SIF/: obj.csv  x.csv  z.csv
Data/SIF/HS/HS26.SIF/: lbd.csv  mu.csv  obj.csv  theta.csv  x.csv  z.csv
Data/SIF/HS/HS27.SIF/: lbd.csv  mu.csv  obj.csv  theta.csv  x.csv  z.csv
Data/SIF/HS/HS28.SIF/: lbd.csv  obj.csv  x.csv  z.csv
Data/SIF/HS/HS29.SIF/: obj.csv  x.csv  z.csv
Data/SIF/HS/HS3.SIF/: obj.csv  x.csv  z.csv
Data/SIF/HS/HS30.SIF/: obj.csv  x.csv  z.csv
Data/SIF/HS/HS31.SIF/: obj.csv  x.csv  z.csv
Data/SIF/HS/HS32.SIF/: lbd.csv  obj.csv  theta.csv  x.csv  z.csv
Data/SIF/HS/HS33.SIF/: obj.csv  x.csv  z.csv
Data/SIF/HS/HS34.SIF/: obj.csv  x.csv  z.csv
Data/SIF/HS/HS35.SIF/: obj.csv  x.csv  z.csv
Data/SIF/HS/HS35I.SIF/: obj.csv  x.csv  z.csv
Data/SIF/HS/HS36.SIF/: obj.csv  x.csv  z.csv
Data/SIF/HS/HS37.SIF/: obj.csv  x.csv  z.csv
Data/SIF/HS/HS38.SIF/: obj.csv  x.csv  z.csv
Data/SIF/HS/HS39.SIF/: lbd.csv  obj.csv  theta.csv  x.csv
Data/SIF/HS/HS4.SIF/: obj.csv  x.csv  z.csv
Data/SIF/HS/HS40.SIF/: lbd.csv  (+4 more)
Data/SIF/HS100.SIF/: obj.csv  x.csv  z.csv
Data/SIF/HS12.SIF/: obj.csv  x.csv  z.csv
Data/SIF/Problem/: CMakeLists.txt  DimensionPreloader.sh  Dimension_Preloader.cpp  ELFUN.f  EXTER.f  GROUP.f  HS107.SIF  OUTSDIF.d  RANGE.f  probname.txt
Data/SIF/ROSENBR/: mu.csv  obj.csv  x.csv  z.csv
Data/SIF/ipopt/: .HS43.SIF.txt.swp  HS104.SIF  Ipopt_stats.py  OUTSDIF.d  Run_HS.sh  ipopt.opt
Plot/: CMakeCache.txt  CMakeLists.txt  HS_Plot.sh  Makefile  Run_HS.sh  SIF_log_traj_plot.txt  cmake_install.cmake
Plot/Data/: Makefile  cmake_install.cmake
Plot/Data/SIF/: Makefile  cmake_install.cmake
Plot/NC_QP/: Objective_Plot.py
Plot/Nonlinear_QP/: Binder.cpp  CMakeLists.txt  NC_QP_Central_Path.py  README.md
Plot/Plot/: Makefile  cmake_install.cmake
Plot/Plot/Nonlinear_QP/: Makefile  cmake_install.cmake
Plot/Plot/QP/: Makefile  cmake_install.cmake
Plot/Plot/SIF/: Makefile  cmake_install.cmake
Plot/QP/: Binder.cpp  CMakeLists.txt  Multiplier_Plot.py  Objective_Plot.py  Subproblem_Plot.py  Trajectory_Plot.py  generate_plots.sh
Plot/SIF/: Binder.cpp  CMakeLists.txt  HS_Classify.py  HS_Stats.py  Multiplier_Plot.py  Objective_Plot.py  Objective_Plot_Restoration.py  Plot_All.py  SIF_traj_log.txt  Subproblem_Plot.py  Trajectory_Plot.py  failed.txt  generate_plots.py
Plot/SIF/HS/: .gitignore  CMakeCache.txt  HS_Classify.py  HS_Objective_Multipliers.sh  HS_Plot.sh  HS_Repeat_Trajectories.sh  HS_Stats.py  HS_Trajectories.sh  Plot_All.py  Run_HS.sh  SIF_log.txt
Plot/SIF/HS/ipopt/: .gitignore  Ipopt_stats.py
Plot/include/: Makefile  cmake_install.cmake
Plot/include/Common/: Makefile  cmake_install.cmake
Plot/include/Dense/: Makefile  cmake_install.cmake
Plot/include/SIF_Dimensions/: Makefile  cmake_install.cmake
Plot/include/Sparse/: Makefile  cmake_install.cmake
Plot/src/: Makefile  cmake_install.cmake
docs/: .gitignore  Doxyfile  HS_pdf.py  combine_pdfs.sh
include/: Makefile  cmake_install.cmake
include/Common/: Cutest.hpp  EigenDataTypes.hpp  Makefile  cmake_install.cmake
include/Common/Barrier_Parameter_Update/: Barrier_Parameter_Update.hpp
include/Common/Memoizer/: Memoizer.hpp
include/Common/Utils/: EigenParser.hpp  Eigen_Utils.hpp  Print.hpp
include/Dense/Hessian_Safeguards/: Hessian_Safeguards.hpp
include/Dense/Initial_Multipliers/: Initial_Multipliers.hpp
include/Dense/KKT_System/: Inequality_Multiplier_Solver.hpp  KKT_System_Dense.hpp
include/Dense/Optimality/: Optimality.hpp
include/Dense/Restoration_Least_Squares/: Restoration_Least_Squares.hpp
include/SIF_Dimensions/: Dimensions.csv  Dimensions.hpp
include/Sparse/Hessian_Safeguards/: Hessian_Safeguards.hpp
include/Sparse/Initial_Multipliers/: Initial_Multipliers.hpp
include/Sparse/KKT_System/: Inequality_Multiplier_Solver.hpp  KKT_System.hpp
include/Sparse/Optimality/: Optimality.hpp
include/Sparse/Restoration_Least_Squares/: Restoration_Least_Squares.hpp
include/Sparse_Deprated/: CMakeLists.txt
include/Sparse_Deprated/Functors/Objective/Objective_SIF/: CMakeLists.txt  Objective_SIF.hpp  Objective_SIF_Old.hpp
include/Sparse_Deprated/Hessian_Safeguards/: Hessian_Safeguards.hpp
include/Sparse_Deprated/Initial_Multipliers/: Initial_Multipliers.hpp
include/Sparse_Deprated/Optimality/: CMakeLists.txt
include/Sparse_Deprated/Restoration_Least_Squares/: Restoration_Least_Squares.hpp
src/: CMakeLists.txt  SIF_Instantiator.cpp  SIF_Instantiator.hpp
t/: ELFUN.f  GROUP.f  HS16  OUTSDIF.d  RANGE.f  ipopt.opt  run_ipopt
test/: CMakeLists.txt  Makefile  cmake_install.cmake
test/Cutest/: CMakeLists.txt  Cutest_constrained_test.cpp  Cutest_unconstrained_test.cpp  Makefile  cmake_install.cmake
test/LSFB/: CMakeLists.txt  LSFB_Sparse.cpp
test/NC_QP/: CMakeLists.txt  NC_QP.cpp
test/Objective/: CMakeLists.txt  Makefile  cmake_install.cmake  objective_SIF_test.cpp
test/QP/: CMakeLists.txt  QP_Constrained.cpp
test/SIF/: CMakeLists.txt  Run_SIF.cpp
(+1490 files in other folders)
